public class Receiver
{
	public final void Action()
	{
		System.out.println("执行请求！");
	}
}