@startuml
class Invoker{
+SetCommand(Command)
+ExecuteCommand()
}
interface Command{
+Execute()
}

Invoker o-> Command
class Receiver{
+Action()
}
Command o->Receiver
ConcreteCommand ..>Command
class main{
new ConcreteCommand(receiver)
invoker.SetCommand(c)
i.ExecuteCommand();
}
main -up-..>Command
main-up-..>Invoker
main-up-..>Receiver
@enduml